--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "serve -s dist"  
+    "start": "serve -s dist"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "vite": "^5.4.8",
-    "serve": "^14.0.1"  
+    "vite": "^5.4.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -26,6 +25,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "serve": "^14.2.3",
     "vite": "^5.4.1"
   }
 }
